tests/data/parseerror/invalid-property-3.php
<?php

class foo {

	public $version = 0
